[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
nom = "7.1"
primes = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "local-time",
    "parking_lot",
] }
